--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -3,12 +3,12 @@
   "references": [
     { "path": "./tsconfig.app.json" },
     { "path": "./tsconfig.node.json" }
-  ], 
-   "compilerOptions": {
+  ],
+  "compilerOptions": {
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"],
-      "@common/*": ["../common/dist/*"], 
+      "@common/*": ["../common/dist/*"]
     }
   }
- }
+}
