--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build:client": "cd client && tsc",
     "build": "npm run build:common && npm run build:server && npm run build:client",
     "start:server": "cd server && npm start",
-    "start:client": "cd client && npm run preview"
+    "start:client": "cd client && npm run preview",
+    "format": "prettier --write ."
   },
   "keywords": [],
   "author": "",
