--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,8 @@
     "express": "^4.21.2",
     "google-auth-library": "^9.15.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.9.2"
+    "mongoose": "^8.9.2",
+    "openai": "^4.78.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
